# vaultwares-adk

./: AGENTS.md  CONTEXT.md  README.md  __init__.py  agent_base.py  agent_ledger.py  assign_spa_tasks.py  assign_tasks.py  columbo.agent.md  columbo.py  extrovert_agent.py  pyproject.toml  redis_coordinator.py
.github/workflows/: jira-sync.yml
agents/: image_agent.py  omni_agent.py  reconstruction_agent.py  text_agent.py  video_agent.py  workflow_agent.py
definitions/: thomas_edison.md
docs/: AGENT_MANIFEST.md  AGENT_TELEMETRY.md  ARCHITECTURE.md  DOCUMENTATION.md  FUNCTIONALITIES.md  GUIDELINES.md  JULES_INTEGRATION.md  LEXICON.md  MULTI_AGENT_FLOW.md  SPAWN_AGENT.md  TASKS_MD_SCHEMA.md  agent-surface-audit.json  agent-surface-audit.md  consumer-integration.md  skills.md
omx_integration/: __init__.py  omx_worker.py  team_orchestrator.py  ui_refactor_orchestrator.py
omx_integration/demo/: run_demo.py
omx_integration/tests/: test_redis_coordinator.py  test_team_utils.py
omx_integration/utils/: __init__.py  team_utils.py
skills/mirrors/vaultwares-pipelines/.github/agents/: README.md
tests/: test_hook_registry.py  test_redis_coordinator.py  test_spawn_agent_skill.py
tools/: audit_agent_surfaces.py  migrate_agent_assets.py  sync_agentciation_rules.py
tools/tests/: test_audit_agent_surfaces.py
vaultwares_adk/: __init__.py
