[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultwares-adk"
version = "1.0.1"
description = "VaultWares Agent Development Kit — multi-agent coordination framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vaultwares_adk"]
